fix overflow canvas issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,7 @@ body {
 #canvas {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 aside.sidebar-left#resizable {
